Wrote more things on the report

--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -25,3 +25,23 @@
     author = {{NVIDIA}},
     howpublished = {\url{http://www.nvidia.com/content/tesla/pdf/NVIDIA-Tesla-Kepler-Family-Datasheet.pdf}}
 }
+
+@article{von1993first,
+  title={First Draft of a Report on the EDVAC},
+  author={Von Neumann, John},
+  journal={IEEE Annals of the History of Computing},
+  volume={15},
+  number={4},
+  pages={27--75},
+  year={1993},
+  publisher={Published by the IEEE Computer Society}
+}
+
+@book{computer_arch_2003,
+  title={Computer Architecture: A Minimalist Perspective: Dynamics and Sustainability},
+  author={Gilreath, William F and Laplante, Phillip A},
+  year={2003},
+  publisher={Springer}
+}
+
+
