--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -203,14 +203,14 @@ keywords = "Drug development "
   publisher={BioMed Central Ltd}
 }
 
-@article{rothman1998modern,
+@book{rothman1998modern,
   title={Modern Epidemiology},
   author={Rothman, KJ and Greenland, S},
   year={1998},
   publisher={London: Lippincott Williams and Wilkins}
 }
 
-@incollection{rothman2002intro_epidemiology,
+@book{rothman2002intro_epidemiology,
   title={Epidemiology: an introduction},
   author={Rothman, Kenneth J},
   booktitle={Epidemiology: an introduction},
@@ -259,4 +259,12 @@ keywords = "Drug development "
   year={2011},
   publisher={BioMed Central Ltd}
 }
+
+@mastersthesis{plink_gpu,
+  title={PlinkGPU: A Framework for GPU Acceleration of Whole Genome Data Analysis},
+  author={Poznanovic, Jeffrey},
+  year={2010},
+  school={School of Informatics, University of Edinburgh}
+}
+
 
