More stuff to report

--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -267,4 +267,51 @@ keywords = "Drug development "
   school={School of Informatics, University of Edinburgh}
 }
 
+@article{bonferroni_multiple,
+  title={Multiple significance tests: the Bonferroni method},
+  author={Bland, J Martin and Altman, Douglas G},
+  journal={Bmj},
+  volume={310},
+  number={6973},
+  pages={170},
+  year={1995},
+  publisher={BMJ}
+}
+
+@article{gustafson1988reevaluating,
+  title={Reevaluating Amdahl's law},
+  author={Gustafson, John L},
+  journal={Communications of the ACM},
+  volume={31},
+  number={5},
+  pages={532--533},
+  year={1988},
+  publisher={ACM}
+}
+
+@article{intro_hpc,
+author = {Sergio Almeida},
+title = {An Introduction to High Performance Computing},
+journal = {International Journal of Modern Physics A},
+volume = {28},
+number = {22n23},
+pages = {1340021},
+year = {2013},
+doi = {10.1142/S0217751X13400216},
+
+URL = {http://www.worldscientific.com/doi/abs/10.1142/S0217751X13400216},
+eprint = {http://www.worldscientific.com/doi/pdf/10.1142/S0217751X13400216}
+}
+
+@inproceedings{jiang_accelerating,
+  title={Accelerating genome-wide association studies using CUDA compatible graphics processing units},
+  author={Jiang, Rui and Zeng, Feng and Zhang, Wangshu and Wu, Xuebing and Yu, Zhihong},
+  booktitle={Bioinformatics, Systems Biology and Intelligent Computing, 2009. IJCBS'09. International Joint Conference on},
+  pages={70--76},
+  year={2009},
+  organization={IEEE}
+}
+
+
+
 
