--- a/doc/CuEira_report.tex
+++ b/doc/CuEira_report.tex
@@ -81,7 +81,6 @@ Abstract in english
 \subsection{Genome-wide association studies}
 Genome-wide association studies(GWAS) is a common type of study to search for associations between genetic markers and diseases. Classicaly it doesn't consider interaction between the genetic markers nor enviromental factors. Gene-gene interaction has started to become more common\cite{cordell_detect_review}, however gene-enviroment is still uncommon\cite{gene_enviroment_2013}. Interaction between genes and enviromental factors are considered imporant for complex diseas such as cancer and autoimmune diseases. \cite{cordell_detect_review, gene_enviroment_2013, geira, ra_smoking}\\
 \\
-
 These types of studies are usually either cohort or case-control. In cohort studies a sample of a population who don't have the disease is followed. Variables that are suspected to be releveant for the disease is measured and over time some of the individuals will get the disease. The data collected can then be used to find risk factors. In case-control studies two groups are compared to find risk factors. One group consists of individuals with the disease and the other of individuals that are similar to the cases but that doesn't have the disease. \cite{rothman1998modern,mann_observational}\\
 \\
 The genetic markers are commonly single-nucleotide polymorphisms(SNPs). SNPs are variations in the genome where a single Nucleotide differs between individuals in a population\cite{fareed_snp}. Enviromental factors can be various things such as smoking, physical activity and so on. The amount of data is usually thousands individuals and hundred thousands or millions SNPs. Due to the high number of SNPs few programs investigate more than second order interaction, a few can handle more but not without drawbacks\cite{gwis,high_order_2012,fast_high_order_cluster}.
@@ -91,7 +90,9 @@ The genetic markers are commonly single-nucleotide polymorphisms(SNPs). SNPs are
 \subsection{Defining Interaction}
 What do we mean with interaction between factors? There are several definitions of the term\cite{rothman2002intro_epidemiology}. The overall goal is usually to find if \emph{biological} interaction is present. Biological interaction is when the factors co-operate through a physiological or biological mechanism and causes the effect (eg. Disease). This is useful since it's the true interaction in some sense and we can use it to explain the mechanisms involved and possibly find cures for diseas. However it's not well defined, it's not something we can calculate directly from data.\cite{rothman1998modern,rothman2002intro_epidemiology}\\
 \\
-\emph{Statistic} interaction on the other hand is much more well defined. However it's scale dependant, ie. interactions can appear and disappear based on transformations of the data. It also depends on the model used(eg Logistic, Linear). The common way to define statistic interaction is as the presence of product terms between the factors in the statistical model, this is refred to as \emph{multiplicative} interaction. For instance for a linear model $f(x,y)=ax+by+cxy+d$ c is the product term that implies multiplicative interaction between variables x and y. Statistic interaction is often called just interaction which can make it a  bit confusig.\cite{geira,rothman1998modern}\\
+\emph{Statistic} interaction on the other hand is much more well defined. However it's scale dependant, ie. interactions can appear and disappear based on transformations of the data. It also depends on the model used(eg Logistic, Linear). The common way to define statistic interaction is as the presence of product terms between the factors in the statistical model, this is refred to as \emph{multiplicative} interaction. For instance for a linear model
+$$f(x,y)=ax+by+cxy+d$$
+c is the product term that implies multiplicative interaction between variables x and y. Statistic interaction is often called just interaction which can make it a  bit confusig.\cite{geira,rothman1998modern}\\
 \\
 It can also be defined as the divergence from additeve effects
 
@@ -123,12 +124,11 @@ Both CPU clusters\cite{biforce} and GPUs\cite{gwis,gboost,gmdr_gpu,cuda_lr,genie
 \\
 There are a lot of algorithms and programs proposed for searching for interaction, most have focused on binary variables as already mentioned. They can be rougly classiefed into four categories, exhaustive, stochastic, machine learning/data mining and stepwise\cite{fast_high_order_cluster}. One of the big differences between methods is wether they are testing for interaction or testing for allowing interaction, see section \ref{test_type} for details. In short it's testing if there is interaction or if there might be interaction.\\
 \\
-Exhaustive search is the most obvious approach, they compare all combinations of the SNPs in the data. They don't risk missing a combination but it also means they can be slow. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and BOOST\cite{boost_gene_gene} are two examples.\\
+Exhaustive search is the most direct approach, they compare all combinations of the SNPs in the data. They don't risk missing a combination but it also means they can be slow. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and BOOST\cite{boost_gene_gene} are two examples.\\
 \\
 Stochastic methods uses random sampling to ``walk'' throught the data. BEAM\cite{beam_2007} is one example and it uses Markov Chain Monte Carlo(MCMC).\\
 \\
-Machine Learning and Data Mining methods are methods from computer science. They are %TODO
-MDR\cite{mdr_2001} is the among the most common methods used in GWAS that is a computer science approach. See section \ref{data_machine_learning} for more details.\\
+Machine Learning and Data Mining methods are methods from computer science. They are methods learn from data and tries to generalize it. MDR\cite{mdr_2001} is the among the most common methods used in GWAS that is a computer science approach. See section \ref{data_machine_learning} for more details.\\
 \\
 Stepwise approaches uses a filtering stage and a search stage. At the filtering stage uninterestings combinations are filtered out by using some exhaustive method. The other SNPs are the examined more carefully in the search stage. BOOST\cite{boost_gene_gene} is an example which uses clever datastructures and a likelihood ratio test to filter the data.
 
@@ -154,7 +154,7 @@ For logistic regression the cells of the table are Binomial distributed.\cite{ag
 In log-linear models Possion distribution is used instead. \cite{agresti_categorical}
 
 \subsubsection{Weighted Logistic Regression}
-Need to find the details on this. Each individual is assigned a weight that can be any postive number. It's then used to weight the logistic regression.
+Each individual is assigned a weight that can be any postive number. It's then used to weight the logistic regression.
 
 \subsubsection{Statistic Measures}
 %Nåt om p values?
@@ -167,22 +167,57 @@ AP
 
 Causual bonds
 
-Bonferetti correction
+Multiple testing hypothesis \cite{bonferroni_multiple}\\
+\\
+Bonferroni correction is the simplest and viewed as the most conservative way to deal with it, simply divided the p-value that a tests passes with the number of hypothesis. How many hypothesis are made isn't always obvious. For instance for a two stage analysis of GWAS data. Is the number of hypothesis the number of tests done in both stages combined, the number made in the first stage or possibly the second stage?\cite{bonferroni_multiple}
 
 \subsection{Data Mining and Machine Learning Approaches}
 \label{data_machine_learning}
 Approaches based on Data Mining and Machine Learning have been a popular choice for GWAS. Multifactor-Dimensionality Reduction(MDR)\cite{mdr_2001} and Random Forest(RF)\cite{random_forest} are among the most common\cite{gene_enviroment_2013,cordell_detect_review}. There are others as well such as clustering approaches \cite{fast_high_order_cluster}. Most of them are used for screening the data for possible interactions\cite{gene_enviroment_2013,cordell_detect_review}.\\
 \\
-Their biggest advantage is that they are usually nonparametric, model free and designed with high dimensional data in mind.
-\\
-However they are prone to overfitting and the usual way to try to prevent that is to use cross valdiation and sometimes permutation tests. That means that even if the method itself is fast it's repeated so many times that it can be slow in the end\cite{cordell_detect_review}.
+Their biggest advantage is that they are usually nonparametric, model free and designed with high dimensional data in mind. However they are prone to overfitting and the usual way to try to prevent that is to use cross valdiation and sometimes permutation tests. That means that even if the method itself is fast it's repeated so many times that it can be slow in the end.\cite{cordell_detect_review}
 
 \subsubsection{Multifactor-Dimensionality Reduction}
 Multifactor-Dimensionality Reduction(MDR) is a method that reduces the number of dimensions by combining several dimensions into one. For GWAS it combines a number of variables from all the variable combinations and its new dimension is then compared against the outcome and if its predictibility is high then the variables that were combined are considred to interact with each other. It goes through all possible combinations of the desired rank like that. It combines the selected n variables by calculating the ratio of cases versus controls for each combination of the possible values of the variables. If the ratio is above a certain threshold all the members of that groups is gets the value 1 for the new dimension, otherwise 0. It's tested with cross valdiation and sometimes permutation tests so it can be slow but is still usually faster than exhaustive search with regression methods.\cite{cordell_detect_review,mdr_2001}\\
 \\
-%TODO XOR example table
+An simple example of MDR using exclusive or(XOR). It's an logical operator that is true if one and only one of it's two variables is true. We have 4 possible combinations and an occurance for each. The combination (1,0) and (0,1) both have one case with outcome 1 so MDR will classify them as 1 in the new variable Z. The other two combinations have outcome 0 so will be classifed with Z=0. And then it's easy to make an predictor from Z to Y.
 
-It can been used for gene-enviroment interaction but requires modifications since MDR can only handle binary variables. There are extensions that can use continus variables however they are regression based so they will be slower than regular MDR.\cite{gene_enviroment_2013}
+\begin{table}[h]
+\begin{tabular}{ | c | c | c | }
+  \hline
+  \textbf{Y} & $\mathbf{X_1}$ & $\mathbf{X_2}$ \\
+  \hline
+  1 & 1 & 0 \\
+  \hline 
+  1 & 0 & 1 \\
+  \hline
+  0 & 0 & 0 \\
+  \hline
+  0 & 1 & 1 \\
+  \hline
+\end{tabular}
+\caption{XOR table with outcome Y and variables $X_1$ and $X_2$.}
+\label{table:xor_table}
+\end{table}
+\begin{table}[h]
+\begin{tabular}{ | c | c | }
+  \hline
+  \textbf{Y} & \textbf{Z} \\
+  \hline
+  1 & 1 \\
+  \hline
+  1 & 1 \\
+  \hline
+  0 & 0 \\
+  \hline
+  0 & 0 \\
+  \hline
+\end{tabular}
+\caption{XOR table with $\mathbf{X_1}$ and $\mathbf{X_2}$ combined into $\mathbf{Z}$ using MDR.}
+\label{table:xor_mdr_table}
+\end{table}
+
+It can been used for gene-enviroment interaction but requires modifications since MDR can only handle binary variables. There are extensions that can use continus variables, however they are regression based so they will be slower than regular MDR.\cite{gene_enviroment_2013}
 
 \subsubsection{Random Forest}
 Random Forest(RF) is an ensemble learning method, ensemble metods combine multiple models to improve performance. It takes bootstrap samples of the data and builds descion trees on each of them. The trees are then combined to form the classifier. Usually hundres or thousands of trees are used depending on the problem\cite{random_forest}. One of the most popular variants of Random Forest for GWAS is Random Jungle.\cite{random_jungle}
@@ -200,12 +235,103 @@ Test for interaction is the test for the interaction parameter equal zero or not
 
 Test for allowing interaction on the other hand is . Aka test saturated vs block independance\cite{boost_gene_gene}.
 
-This means that test for allowing for interaction is faster to use so it's commonly used for screening methods.
+Depedning on model test for allowing interaction can be faster so it's often used in screening methods, although the term can be a bit fuzzy for non linear regression models. \cite{cordell_detect_review}
 
-\cite{cordell_detect_review}
+\clearpage
+\subsection{High Performance Computing}
+High Performance Computing(HPC) is a branch of computer science that focuses on developing supercomputers and related software. Since they are parallel a big area is how to paralleliz various algorithms.
+
+top 500\cite{TOP500}
+
+More than flops/sec
+
+Moores Law, more threads, increased need for parallelization
+
+compilers\cite{intro_hpc}
+
+%Sektioner om i/o, networks etc
+
+\subsubsection{Performance Measures}
+An important part in making fast and efficent programs is to know how fast the program is under certain conditions and which parts of the program is slow. For instance the speed could suddenly drop when we start using to many threads, there might be a bottlneck in the network, and so on.\\
+\\
+There are two ways to measure how long a program takes to execute. Execution time, sometimes called wall clock time, is how long real life time the program took. The other is to measure the number of processor cycles spent. A parallel program will have shorter execution time than it's serial version however it will likely have spent more processor cycles due to overhead from communcation and initialisation of the threads. We are usually intrested in execution time however number of cycles can be useful for comparasion of algorithms.\\
+\\
+Speedup is measures how much faster then program is with a certain number of threads compared to the serial version. It's defined as
+$$S(p)=\frac{T(1)}{T(p)}$$
+Where $T(1)$ is execution time of serial program and $T(p)$ is execution time of parallel program with p threads. Linear speedup is when S(p)=p, can also be called perfect speedp.\\
+\\
+Efficeny reflects how effcient the program is using p threads. It's defined as
+$$E(p)=\frac{S(p)}{p}=\frac{T(1)}{pT(p)}$$
+\\
+Scalability refers to how good the program handles increased .
+Weak and strong scaling
+
+Make graphs with number of nodes vs speed, number of cpus vs speed, and so on to show scalability. Also make graphs of data size vs speed to show it handle various data sizes.
+
+\subsubsection{Amdahls Law and Gustafsons Law}
+Amdahls Law is used to find the maximum expected speed up of a system when parts of it won't or can't be parallized. Simply it says that as the number of processors increases the parts that aren't parallized will start taking up more and more of the wall clock time and that the speedup for adding more processors will decrease as more and more processors are added and more time is spent relativly on the non parallized part.\\
+\\
+The definition is:\\
+$$T(p)=T(1)(F+\frac{1}{p}(1-F))$$
+Where F is fraction of the code that is serial. The speedup with p threads over 1 thread is then:
+$$S(p)=\frac{T(1)}{T(p)}=\frac{1}{F+\frac{1}{p}(1-F)}$$
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=11cm]{AmdahlsLaw.png}
+    \caption{Illustration of Amdahls Law. Wikipedia Commons}
+    \label{fig:AmdahlsLaw}
+\end{figure}
+
+There are limitation to Amdahls Law since it makes a couple of assumptions.
+
+\begin{itemize}
+  \item The number of executing threads remain constant over the course of the program.
+  \item The parallel portion has perfect speedup. Often not true due to shared resources(eg caches, memor bandiwth) and shared data.
+  \item The parallel portion has infinite scaling, not true due to similar limits as above. More threads will not increase performance after a while or might even decrease it.
+  \item There is no overhead for creation and destruction of threads.
+  \item The length of the serial portion is independent of the number of threads. Often the serial work is to divided the work to the threads, this work will obviously increase as the number of threads go up. More threads can also lead to more communcation overhead.
+  \item The serial portion can't be overlapped by the parallel parts. For instance with producer consumer type pattern the consumer could be strictly serial but the time it takes could be overlapped by the parallel producers.
+\end{itemize}
+
+This means it works best on code that is fork-join type. Eg serial parts and then for instance embarasingly parallel parts.\\
+\\
+Gustafsons Law is closely related to Amdahls Law and can in some ways be more accurate than Amdahls Law. It makes similar assumptions as Amdahls Law however it also makes two additiona statments. It states that problems tends to expand when provided with more computational power, eg increased precision by reducing grid size, high frame rate for graphics. The second is that the parallel portion of the program tends to exapand faster than the serial part, eg for matrix multiplication the initialisation scales linearly with the matrix size while the multiplication itself scales as $O(n^3)$. It says that the expected speedup with p threads and F fraction of the code that is serial is\cite{gustafson1988reevaluating}
+$$S(p)=p-F(p-1)$$
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=11cm]{Gustafson2.png}
+    \caption{Illustration of Gustafsons Law. Wikipedia Commons}
+    \label{fig:GustafsonsLaw}
+\end{figure}
+
+\subsubsection{Profilers}
+Profilers are programs that are made to assses the programs performance and resource consumption. They calculate some of the measures mentioned above and they also check hardware usage and how much time the program spends at various parts of the program. This is very useful for finding bottlnecks and other problems in the program. It doesn't matter if the algorithm is super fast if all the data is stuck in network transfers. The profilers can be hardware dependent so the manufacutres usually provided them for their products. For instance NVIDIA provides profilers for programs that use CUDA.
+
+\subsubsection{Clusters}
+Clusters are collections of computers that can work together in several ways and are so tightly connected that they can usually be viewed as a single system. They communciate over a shared network but have seperate memory and procesors. Storage is usually shared. A computer in a cluster is called a \emph{node}. \cite{intro_hpc}
+
+Mix of gpus and cpu are common. So the GPUs can do the heavy computation while other parts are used on CPU.
+
+Flops is not everything, bad performace compare to theortical maximum
+Stuck in network, harddrives, etc. Latency
+Very few programs scale to the fastest clusters, peta scale.
+
+Tianhe 2 is current top. Theoretical performance 54.9 PetaFlops.\cite{TOP500}
+Max achived with LinPack 33 PetaFlops
+60\% efficiency
+
+Picture of Tianhe-2 here
+
 \clearpage
 \subsection{Computer Architecture}
-Most computers today use the Von Neuman architecture\cite{}. It was first used in EDVAC which was one of the first stored program computers\cite{von1993first}. Stored programc computers uses electronic memory to store the program instructions\cite{computer_arch_2003}.
+
+Most computers today have a multicore architecture
+means several processors share the main memory and othe reaousrces. they can coperate on the same problem but it they are cordinated on a case by case basis since each algorithm requires different sharing.
+
+Von Neuman architecture
+It was first used in EDVAC which was one of the first stored program computers\cite{von1993first}. Stored programc computers uses electronic memory to store the program instructions\cite{computer_arch_2003}.
 
 \begin{figure}[h]
     \centering
@@ -214,10 +340,14 @@ Most computers today use the Von Neuman architecture\cite{}. It was first used i
     \label{fig:VonNeuman}
 \end{figure}
 
+blabla some text here about von neaum architecture
+
+For HPC it's easiest to think about the architecture as three main parts, data storage, processor and the memory.\cite{intro_hpc}
+
 \subsubsection{CPU}
 Central processing unit(CPU) is 
 
-Until X there was single core CPUs on top 500. Since about 2005 most CPUs have several cores which has increased the need for parallelization. The cores themselves aren't getting faster, the CPUs have more cores.
+Until 1996 there was computers with just a single core CPU on top 500\cite{TOP500}. Since about 2005 most desktop computers CPU has several cores which has increased the need for parallelization. The cores themselves aren't getting faster, the CPUs have more cores.
 
 schematic here
 
@@ -231,10 +361,14 @@ The table from the cuda guide with performance of GPU vs CPU.\cite{cuda}
 
 something about single and double precision
 
-Xeon Phi
+structure
+
+Xeon Phi, intel mic
+
+structure
 
 \paragraph{Hetrogenous programming model}
-is that
+Hetrogenous programming model is used when seperate memory for CPU and GPU.
 
 \paragraph{CUDA libraries}
 %TODO to have or not to have?
@@ -247,7 +381,7 @@ There are several libraries that extend CUDA available.
 
 
 %TODO vart ska det här vara?
-\subsubsection{Efficient CUDA}
+\paragraph{Efficient CUDA}
 One of the main critizm against GPUs for general computing purposes is that it's hard to get good performance because it requires good knowledge about details of the GPU architecture, especially the memory architecture. There are a few things to keep in minde when writing CUDA programs.\\
 \\
 assync memory
@@ -271,71 +405,6 @@ textures
 
 \cite{cuda, cuda_best_practice}
 
-
-
-
-\clearpage
-\subsection{High Performance Computing}
-What is it
-
-More than flops/sec
-
-%Sektioner om i/o, networks etc
-
-\subsubsection{Performance Measures}
-An important part in making fast and efficent programs is to know how fast the program is under certain conditions and which parts of the program is slow. For instance the improvment of speed could suddenly drop when we start using to many threads, there might be a bottlneck, and so on.\\
-\\
-There are two ways to measure how long a program takes to execute. Execution time, sometimes called wall clock time, is how long real life time the program took. The other is to measure the number of processor cycles spent. A parallel program will have shorter execution time than it's serial version however it will likely have spent more processor cycles due to overhead from communcation and initialisation of the threads. We are usually intrested in execution time however number of cycles can be useful for comparasion of algorithms.\\
-\\
-Speedup is measures how much faster then program is with a certain number of threads compared to the serial version. It's defined as
-$$S(p)=T(1)/T(p)$$
-Where $T(1)$ is execution time of serial program and $T(p)$ is execution time of parallel program with p threads. Linear speed up is when S(p)=p\\
-\\
-Efficeny reflects how effcient the program uses p threads. It's defined as
-$$E(p)=S(p)/p=T(1)/(pT(p))$$
-\\
-Amdahls Law is used to find the maximum expected speed up of a system when parts of it won't or can't be parallized. Simply it says that as the number of processors increases the parts that aren't parallized will start taking up more and more of the wall clock time and that the speedup for adding more processors will decrease as more and more processors are added and more time is spent relativly on the non parallized part.\\
-\\
-The definition is:\\
-$$T(p)=T(1)(F+1/p(1-F))$$
-Where F is fraction of the code that is serial. The speedup with p threads over 1 thread is then:
-$$S(p)=T(1)/T(p)=1/(F+1/p(1-B))$$
-
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=11cm]{AmdahlsLaw.png}
-    \caption{Illustration of Amdahls Law. Wikipedia Commons}
-    \label{fig:AmdahlsLaw}
-\end{figure}
-
-There are limitation to Amdahls Law. BLA BLA
-
-Gustafssons Law
-
-Scalability
-
-Make graphs with number of nodes vs speed, number of cpus vs speed, and so on to show scalability. Also make graphs of data size vs speed to show it handle various data sizes.
-
-\subsubsection{Profilers}
-Profilers bla bla
-
-\subsubsection{Clusters}
-What are they
-
-Memory spread out etc
-
-Message parsing, pretty much all uses it
-
-Mix of gpus and cpu are common. So the GPUs can do the heavy computation while other parts are used on CPU.
-
-Flops is not everything, bad performace compare to theortical maximum
-Stuck in network, harddrives, etc. Latency
-Very few programs scale to the fastest clusters, peta scale.
-
-Tianhe 2 is current top. Theoretical performance 54.9 PetaFlops.
-Max achived with LinPack 33 PetaFlops
-60\% efficiency
-
 \subsection{Which program for GPU and which for CPU?}
 This a big question. As with a lot of things it depends on the algorithm to implement etc.
 
@@ -347,6 +416,9 @@ Xeon Phi is an altnerative
 
 GPUs loses more when going from single precision to double than CPUs. Peak performance on tesla-kepler cards for single precision is around 4 Tflops while double precision is around 1.4 Tflops. \cite{nvtesla}\\ ref the table thing
 
+In short GPUs excel at linear algebra.
+
+\clearpage
 \section{Algorithm}
 %Algorithm (up till 20 pages)
 %  - Current state - Basic algorithm, Data structure, memory consumption, parallelization, load balancing and scalability
@@ -357,9 +429,9 @@ GPUs loses more when going from single precision to double than CPUs. Peak perfo
 \subsection{Why GPU for GWAS?}
 Most approaches to interaction analysis is embarasingly parallel since they consider each combination independtly from the others. That means that those algorithms are likely to work well on GPUs. Several studies got high gains from implementing their programs on GPU, however their CPU versiosn weren't parallelized so it could be that the peformance of the CPU versions could have been improved a lot from CPU parallelization.\cite{gwis,gboost,gmdr_gpu,cuda_lr,genie_2012,plink_gpu}\\
 \\
-However there have been studies where the authors implemented their algorithm on both CPU clusters and on a GPU. One study needed X cpu nodes to reach the same performance. %cite http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=5260739&tag=1&abstractAccess=no&userType=inst
+However there have been studies where the authors implemented their algorithm on both CPU clusters and on a GPU. One study needed 16 CPU nodes to reach the same performance as a GTX 280 card\cite{jiang_accelerating}.
 
-%Exceptions? Possibly stuff like cluster than needs communcation
+%Exceptions? Possibly stuff like clustering than needs communcation
 
 %OTHERS
 %problem with exathsutive
@@ -373,6 +445,10 @@ However there have been studies where the authors implemented their algorithm on
 
 \subsection{Current algorithm}
 JEIRA uses
+
+Producer consumer pattern
+
+Symmetric condfidence interval of additive effects.
 
 %Performance analysis
 
